--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <h1 class="display-4 text-center text-white">Jeopardy!</h1>
+
     <div class="container">
       <div class="row">
         <div class="col text-center">
@@ -37,9 +38,10 @@
       </table>
     </div>
 
+    <!-- Jquery, axios, popper.js, and boostrap scripts  -->
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <script src="https://unpkg.com/lodash"></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
